add proxy module and reverse proxy service update to jdk 24 refactor rpc registration